all rules removed from eslint config file

--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.0.0",
-		"eslint": "^9.0.0",
-		"globals": "^15.0.0"
+		"eslint": "^9.2.0",
+		"globals": "^15.2.0",
+		"morgan": "^1.10.0",
+		"nodemon": "^3.1.0"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
-		"mongoose": "^8.3.4",
-		"morgan": "^1.10.0",
-		"nodemon": "^3.1.0"
+		"mongoose": "^8.3.4"
 	}
 }
